Fixed the overflow of the descriptionContainer

--- a/src/components/Note.module.css
+++ b/src/components/Note.module.css
@@ -41,14 +41,17 @@ a {
   display: flex;
   align-items: flex-end;
   background-color: grey;
+  overflow-y: hidden;
   padding-left: 1vw;
   padding-right: 1vw;
-  overflow: hidden;
 }
 .descriptionContainer {
   display: flex;
   flex-direction: row;
   height: 45px;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 .detailOpen {
   padding-top: 1.5vh;
@@ -67,7 +70,6 @@ a {
 .description {
   padding-right: 2px;
   margin-bottom: -10px;
-  overflow-x: scroll;
 }
 .buttonContainer {
   display: flex;
